# ErisPulse-EmailAdapter

./: .gitignore  README.md  pyproject.toml
EmailAdapter/: Core.py
tests/: main.py  test.py
