[project]
name = "ErisPulse-EmailAdapter"
version = "0.2.0"
description = "ErisPulse邮箱适配器，支持多账号管理、HTML内容和附件发送"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "wsu2059q", email = "wsu2059@qq.com"}
]

dependencies = [
    
]

[project.urls]
homepage = "https://github.com/ErisPulse/ErisPulse-EmailAdapter"

[project.entry-points."erispulse.adapter"]
"mail" = "EmailAdapter:EmailAdapter"
"email" = "EmailAdapter:EmailAdapter"